[package]
name = "axum-either"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }

[features]
nomacro = []
